Fix profile and scrollbar

--- a/tba_dashboard/src/App.css
+++ b/tba_dashboard/src/App.css
@@ -402,3 +402,25 @@ body {
 .label {
   line-height: 10px;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 5px grey; */
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 5px;
+}
